// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TotalCostCalculator /> renders properly with customClasses provided 1`] = `
<TotalCost
  customClasses="testclass"
  total={15}
/>
`;

exports[`<TotalCostCalculator /> renders properly with default props 1`] = `
<TotalCost
  customClasses=""
  total={15}
/>
`;
